--- a/templates/req.html
+++ b/templates/req.html
@@ -10,20 +10,15 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="/">Лабороторная работа 4</a>
+  <a class="navbar-brand" href="/">Экзамен Семенников Кирилл 181-351(Так же сюда можно нажать)</a>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+
       <li class="nav-item">
         <a class="nav-link" style="color:pink;"></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/sub">Абоненты</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/tariff">Тарифы</a>
-      </li>
-       <li class="nav-item">
-        <a class="nav-link" href="/town">Города</a>
+        <a class="nav-link" href="/req">Обращения клиентов</a>
       </li>
     </ul>
       <h4 class="text-white mr-3">{{ login }}</h4>
@@ -33,43 +28,65 @@
     <div class="d-flex justify-content-center">
 	<div class="content text-center">
 
-        <h2 class="text-center mb-5">Таблица активных абонентов</h2>
+        <h2 class="text-center mb-5">Таблица Обращений</h2>
                  <table class="table text-center">
   <thead>
-  <a href="/sub/new">Добавить нового абонета</a>
+  <a href="/req/new">Добавить новое обращение</a>
     <tr>
-      <th scope="col">ID</th>
-      <th scope="col">Полное Имя</th>
-        <th scope="col">Город</th>
-        <th scope="col">Тариф</th>
+      <th scope="col">Дата</th>
+      <th scope="col">Пользователь</th>
+        <th scope="col">Тип</th>
+        <th scope="col">Статус</th>
+        <th scope="col">Сообщение</th>
                </tr>
   </thead>
   <tbody>
-  {% for sub in subs %}
+  {% for req in reqs %}
   <tr>
-      <th scope="row">{{ sub["id"] }}</th>
-      <td>{{ sub["full_name"]  }}</td>
-      <td>{{ sub["town"]  }}</td>
-      <td>{{ sub["tariff"]  }}</td>
-      <td><form action="/sub/edit" method="POST">
-						<input type="hidden" name="id" value="{{ sub["id"] }}">
-                        <input type="hidden" name="full_name" value="{{ sub["full_name"] }}">
-                         <input type="hidden" name="town_id" value="{{ sub["town_id"] }}">
-                        <input type="hidden" name="tariff_id" value="{{ sub["tariff_id"] }}">
+      <th scope="row">{{ req["date"] }}</th>
+      <td>{{ req["user"]  }}</td>
+      <td>{{ req["type"]  }}</td>
+      <td>{{ req["status"]  }}</td>
+      <td>{{ req["message"]  }}</td>
+      {% if role_id in [1,2] %}
+      <td><form action="/req/edit" method="POST">
+						<input type="hidden" name="id" value="{{req["id"]}}">
+                        <input type="hidden" name="date" value="{{ req["date"] }}">
+                         <input type="hidden" name="type_id" value="{{ req["type_id"] }}">
+                        <input type="hidden" name="status_id" value="{{req["status_id"] }}">
+                        <input type="hidden" name="user_id" value="{{req["user_id"] }}">
+                        <input type="hidden" name="message" value="{{req["message"] }}">
 						<button type="submit" class="btn btn-primary">edit</button>
 					</form></td>
-  <td><form action="/sub/delete" method="POST">
-						<input type="hidden" name="id" value="{{ sub["id"] }}">
-                        <input type="hidden" name="full_name" value="{{ sub["full_name"] }}">
-                         <input type="hidden" name="town_id" value="{{ sub["town_id"] }}">
-                        <input type="hidden" name="tariff_id" value="{{ sub["tariff_id"] }}">
+      {% endif %}
+       {% if role_id in [1] %}
+  <td><form action="/req/delete" method="POST">
+						<input type="hidden" name="id" value="{{req["id"]}}">
 						<button type="submit" class="btn btn-primary">delete</button>
 					</form></td>
+      {% endif %}
     </tr>
   {% endfor %}
   </tbody>
         </table>
     </div>
     </div>
+<div role="alert" aria-live="assertive" aria-atomic="true" class="toast" data-autohide="false" id ="error_login">
+  <div class="toast-header">
+    <strong class="mr-auto">ADMIN</strong>
+    <small>Когда то давно</small>
+    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+      <span aria-hidden="true">&times</span>
+    </button>
+  </div>
+  <div class="toast-body">
+    Что то пошло не так
+  </div>
+</div>
 </body>
+{% if error %}
+<script>
+    $('#error_login').toast('show')
+</script>
+{% endif %}
 </html>
