--- a/templates/req_new.html
+++ b/templates/req_new.html
@@ -10,79 +10,79 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="/">Лабороторная работа 4</a>
+  <a class="navbar-brand" href="/">Экзамен Семенников Кирилл 181-351(Так же сюда можно нажать)</a>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+
       <li class="nav-item">
         <a class="nav-link" style="color:pink;"></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/sub">Абоненты</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/tariff">Тарифы</a>
-      </li>
-       <li class="nav-item">
-        <a class="nav-link" href="/town">Города</a>
+        <a class="nav-link" href="/req">Обращения клиентов</a>
       </li>
     </ul>
       <h4 class="text-white mr-3">{{ login }}</h4>
       <a href="logout"><button type="button" class="btn btn-light">Разлогинься</button></a>
   </div>
 </nav>
-	<div class="content text-center">
-        <h4 class="text-center">Add new tariff</h4>
+
+
+
+<div class="content text-center">
+        <h4 class="text-center">Добавить обращение</h4>
          <div class="col-md-4 my-4 border border-white rounded container text-center" id="main">
 
     <div class="container text-center">
-        <form class='form' method="post" action="/sub/new">
+        <form class='form' method="post" action="/req/new">
             <div class="form-group">
-            <label for="id">id</label>
-            <input type="number" class="form-control" id="id" placeholder="id" name="id">
+            <label for="id">ДАта</label>
+            <input type="date" class="form-control" id="id" placeholder="date" name="date" >
                 </div>
             <div class="form-group">
-            <label for="title">full_name</label>
-            <input type="text" class="form-control" id="full_name" placeholder="full_name" name="full_name">
-                </div>
-            <div class="form-group">
-            <label for="town">town</label>
-           <select name="town">
-               {% for town in towns %}
-                <option value={{ town.id }}>{{ town.title }}</option>
+            <label for="town">Тип</label>
+            <select name="type_id">
+            {% for type in types %}
+                <option value={{ type.id }} >{{ type.type }}</option>
                {% endfor %}
             </select>
                 </div>
             <div class="form-group">
-            <label for="description">tariff</label>
-            <select name="tariff">
-               {% for tariff in tariffs %}
-                <option value={{ tariff.id }}>{{ tariff.title }}</option>
+            <label for="tariff">status</label>
+            <select name="status_id">
+            {% for status in statuss %}
+                <option
+                    value={{ status.id }}>{{ status.status }}</option>
                {% endfor %}
             </select>
             </div>
+              <div class="form-group">
+            <label for="id">Сообщение</label>
+            <input type="text" class="form-control" id="id" placeholder="message" name="message">
+                </div>
+             <input type="hidden" class="form-control" id="id" placeholder="user_id" name="user_id" value="{{user_id}}">
+
              <input type=submit class='btn btn-success' value='Добавить'>
         </form>
     </div>
          </div>
     </div>
-
-  <thead>
-<div role="alert" aria-live="assertive" aria-atomic="true" class="toast" data-autohide="false" id ="error_insert">
+<div role="alert" aria-live="assertive" aria-atomic="true" class="toast" data-autohide="false" id ="error_login">
   <div class="toast-header">
     <strong class="mr-auto">ADMIN</strong>
     <small>Когда то давно</small>
     <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
+      <span aria-hidden="true">&times</span>
     </button>
   </div>
   <div class="toast-body">
-    Что то не так проверьте данные или попробуйте позже
+    Что то пошло не так
   </div>
 </div>
 </body>
-{% if insert_false %}
+{% if error %}
 <script>
-    $('#error_insert').toast('show')
+    $('#error_login').toast('show')
 </script>
 {% endif %}
+</body>
 </html>
