--- a/templates/req_new.html
+++ b/templates/req_new.html
@@ -22,7 +22,7 @@
       </li>
     </ul>
       <h4 class="text-white mr-3">{{ login }}</h4>
-      <a href="logout"><button type="button" class="btn btn-light">Разлогинься</button></a>
+      <a href="../logout"><button type="button" class="btn btn-light">Разлогинься</button></a>
   </div>
 </nav>
 
